# MyGE

./: .gitignore  CMakeLists.txt  README.md  todo.md
assets/: test.world
assets/_internal/materials/: skyBlack.mat
assets/scenes/: Game.scene  skybox.world
assets/scripts/: Game.lua  MoveChildren.lua  MoveRoot.lua  test_00.lua
assets/shaders/: ForwardColor.hlsl  Geometry.hlsl  Irradiance.hlsl  StdPipeline_details.hlsli  Wireframe.shader
config/: Config.cmake.in
designs/: DesceriptorHeap.md  MultiThread.md  PSOManagement.md  Serialize.md  Shader.md  ShaderConstantBuffer.md  Shader_xmind.md  StaticDynamicResource.md  TripleBuffer.md  deps.md
include/MyGE/: MyGE.h
include/MyGE/Asset/: AssetMngr.h  Serializer.cpp  Serializer.h
include/MyGE/Core/: Asset.h  AssetImporter.h  AssetMngr.h  DefaultAsset.h  GameTimer.h  HLSLFile.h  ImGUIMngr.h  Image.h  Material.h  Mesh.h  MeshTopology.h  MyDRefl_Register_Core.h  Object.h  Register_Core.h  Scene.h  Serializer.h  Shader.h  ShaderMngr.h  ShaderPass.h  SharedVar.h  StringsSink.h  SubMeshDescriptor.h  TextAsset.h  Texture.h  Texture2D.h  TextureCube.h  Traits.h  WorldAssetImporter.h
include/MyGE/LuaECS/: LuaECS.h
include/MyGE/Render/: GPURsrc.h  HLSLFile.h  HLSLFileImporter.h  Material.h  MaterialImporter.h  Mesh.h  MeshImporter.h  MeshTopology.h  MyDRefl_Register_Render.h  Register_Render.h  RenderQueue.h  RenderRsrcObject.h  RenderState.h  RootParameter.h  Shader.h  ShaderImporter.h  ShaderMngr.h  ShaderPass.h  ShaderProperty.h  SubMeshDescriptor.h  Texture.h  Texture2D.h  TextureCube.h  TextureCubeImporter.h  TextureImporter.h
include/MyGE/ScriptSystem/: LuaContext.h  LuaCtxMngr.h  LuaMngr.h  LuaScript.h  LuaScriptQueue.h  LuaScriptQueueSystem.h
src/App/BRDFLUTGenerator/: CMakeLists.txt  main.cpp
src/App/D3DApp/: CMakeLists.txt  D3DApp.cpp
src/App/DX12App/: CMakeLists.txt  DX12App.cpp
src/App/Editor/: CMakeLists.txt  CmptInsepctor.cpp  CmptInsepctor.h  Editor.cpp  InspectorRegistry.cpp  InspectorRegistry.h  (+1 more)
src/Asset/: AssetMngr.cpp  CMakeLists.txt  Serializer.cpp
src/Asset/MyShaderCompiler/: MyShaderCompiler.cpp  MyShaderCompiler.h
src/Asset/ShaderCompiler/: ShaderCompiler.cpp  ShaderCompiler.h
src/Core/: AssetImporter.cpp  AssetMngr.cpp  CMakeLists.txt  GameTimer.cpp  ImGUIMngr.cpp  Image.cpp  Mesh.cpp  Serializer.cpp  ShaderMngr.cpp  StringsSink.cpp  TextureCube.cpp  WorldAssetImporter.cpp  World_Register_Core.cpp
src/LuaECS/: CMakeLists.txt  LuaECS.cpp
src/Render/: CMakeLists.txt  HLSLFileImporter.cpp  MaterialImporter.cpp  Mesh.cpp  MeshImporter.cpp  MyDRefl_Register_Render.cpp  Register_Render.cpp  RenderQueue.cpp  ShaderImporter.cpp  ShaderMngr.cpp  TextureCube.cpp  TextureCubeImporter.cpp  TextureImporter.cpp
src/Render/DX12/: CMakeLists.txt  GPURsrcMngrDX12.cpp  MeshLayoutMngr.cpp  PipelineBase.cpp  RsrcMngrDX12.cpp  ShaderCBMngrDX12.cpp  StdPipeline.cpp
src/Render/MyShaderCompiler/: MyShaderCompiler.cpp  MyShaderCompiler.h
src/Render/ShaderImporter/: ShaderImporterRegisterImpl.h  ShaderImporterRegister_Blend.cpp  ShaderImporterRegister_BlendOp.cpp  ShaderImporterRegister_BlendState.cpp  ShaderImporterRegister_CompareFunc.cpp  ShaderImporterRegister_CullMode.cpp  ShaderImporterRegister_DescriptorRange.cpp  ShaderImporterRegister_FillMode.cpp  ShaderImporterRegister_RenderState.cpp  ShaderImporterRegister_RootConstants.cpp  ShaderImporterRegister_RootDescriptor.cpp  ShaderImporterRegister_RootDescriptorType.cpp  ShaderImporterRegister_Shader.cpp  ShaderImporterRegister_ShaderProperty.cpp  ShaderImporterRegister_Shader_1.cpp  ShaderImporterRegister_Shader_2.cpp  ShaderImporterRegister_Shader_3.cpp  ShaderImporterRegister_StencilOp.cpp  ShaderImporterRegister_StencilState.cpp
src/Render/Systems/: CameraSystem.cpp
src/ScriptSystem/: CMakeLists.txt  InitCore.cpp  InitCore.h  InitMyECS.cpp  InitMyECS.h  InitMyGraphviz.cpp  InitMyGraphviz.h  InitTransform.cpp  InitTransform.h  LuaArray.h  LuaBuffer.h  LuaCmpt.cpp  LuaCmpt.h  LuaContext.cpp  LuaCtxMngr.cpp  LuaECSAgency.cpp  LuaECSAgency.h  LuaMemory.cpp  LuaMemory.h  LuaMngr.cpp  LuaScriptQueueSystem.cpp  LuaSystem.cpp  LuaSystem.h
src/Transform/: CMakeLists.txt  LocalToParentSystem.cpp  RotationEulerSystem.cpp  TRSToLocalToParentSystem.cpp  TRSToLocalToWorldSystem.cpp  WorldToLocalSystem.cpp
tools/myshader/: MyShader.g4  run.bat  run_build.bat  run_fast.bat  test.myshader  test2.myshader
(+312 files in other folders)
